Fix overflow on the facebook like box.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -141,7 +141,9 @@ form
   text-align: center
   h2
     padding-top: 1em
-
+.call_to
+  .row
+    overflow: visible
 article.call_to_action
   background: image-url('bg.jpg') center top no-repeat
 
